@@ -21,6 +21,7 @@ import com.powsybl.iidm.network.VariantManagerConstants;
 import com.powsybl.iidm.network.test.FourSubstationsNodeBreakerFactory;
 import com.powsybl.loadflow.LoadFlowParameters;
 import com.powsybl.loadflow.LoadFlowResult;
+import com.powsybl.loadflow.LoadFlowRunParameters;
 import com.powsybl.security.SecurityAnalysisParameters;
 import com.powsybl.security.SecurityAnalysisResult;
 import com.powsybl.security.SecurityAnalysisRunParameters;
@@ -81,13 +82,17 @@ class DynaFlowTest extends AbstractDynawoTest {
                         PowsyblTestReportResourceBundle.TEST_BASE_NAME)
                 .withMessageTemplate("testIEEE14")
                 .build();
-        LoadFlowResult result = loadFlowProvider.run(network, computationManager, VariantManagerConstants.INITIAL_VARIANT_ID, loadFlowParameters, reportNode)
+        LoadFlowRunParameters runParameters = new LoadFlowRunParameters()
+                .setComputationManager(computationManager)
+                .setParameters(loadFlowParameters)
+                .setReportNode(reportNode);
+        LoadFlowResult result = loadFlowProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, runParameters)
                 .join();
 
         assertEquals(1, result.getComponentResults().size());
-        LoadFlowResult.ComponentResult componentResult = result.getComponentResults().get(0);
+        LoadFlowResult.ComponentResult componentResult = result.getComponentResults().getFirst();
         assertEquals(CONVERGED, componentResult.getStatus());
-        assertEquals("B4", componentResult.getSlackBusResults().get(0).getId());
+        assertEquals("B4", componentResult.getSlackBusResults().getFirst().getId());
 
         StringWriter sw = new StringWriter();
         reportNode.print(sw);
@@ -120,7 +125,11 @@ class DynaFlowTest extends AbstractDynawoTest {
                         PowsyblTestReportResourceBundle.TEST_BASE_NAME)
                 .withMessageTemplate("testIEEE14")
                 .build();
-        loadFlowProvider.run(network, computationManager, VariantManagerConstants.INITIAL_VARIANT_ID, loadFlowParameters, reportNodeLf).join();
+        LoadFlowRunParameters lfRunParameters = new LoadFlowRunParameters()
+                .setComputationManager(computationManager)
+                .setParameters(loadFlowParameters)
+                .setReportNode(reportNodeLf);
+        loadFlowProvider.run(network, VariantManagerConstants.INITIAL_VARIANT_ID, lfRunParameters).join();
 
         StringWriter swReportNodeLf = new StringWriter();
         reportNodeLf.print(swReportNodeLf);
